--- a/Pilot this/Base.lproj/Main.storyboard
+++ b/Pilot this/Base.lproj/Main.storyboard
@@ -5,7 +5,7 @@
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Pilots-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
                 <viewController id="vXZ-lx-hvc" customClass="ViewController" customModule="Pilot_this" customModuleProvider="target" sceneMemberID="viewController">
@@ -21,13 +21,13 @@
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="54" id="hIM-Rq-2Tf">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="PilotCell" rowHeight="54" id="hIM-Rq-2Tf">
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="hIM-Rq-2Tf" id="5fL-ZS-1Ak">
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Product Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C8g-Gk-5hv">
-                                                    <rect key="frame" x="8" y="17" width="254" height="21"/>
+                                                    <rect key="frame" x="8" y="16" width="254" height="21"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="21" id="6sU-vH-EpS"/>
                                                     </constraints>
@@ -56,6 +56,7 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </prototypes>
+                                <sections/>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -72,8 +73,12 @@
                             </mask>
                         </variation>
                     </view>
-                    <navigationItem key="navigationItem" id="32O-rY-BEa">
-                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="Cb9-vK-h1x"/>
+                    <navigationItem key="navigationItem" title="Pilots" id="32O-rY-BEa">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="Cb9-vK-h1x">
+                            <connections>
+                                <segue destination="PL4-Nv-KcG" kind="show" id="UnT-cF-HNP"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                 </viewController>
@@ -81,11 +86,91 @@
             </objects>
             <point key="canvasLocation" x="1252" y="354"/>
         </scene>
+        <!--Product Name-->
+        <scene sceneID="XkF-Xz-ayX">
+            <objects>
+                <viewController title="Product Name" id="PL4-Nv-KcG" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Mx4-vp-b9Q"/>
+                        <viewControllerLayoutGuide type="bottom" id="yVP-vW-Mdz"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="xil-nj-hIq">
+                        <rect key="frame" x="0.0" y="0.0" width="568" height="320"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="graph.png" translatesAutoresizingMaskIntoConstraints="NO" id="iGd-s6-9gT">
+                                <rect key="frame" x="16" y="72" width="536" height="185"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="185" id="Vin-Dc-r30"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="30d" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Acv-A4-PlE">
+                                <rect key="frame" x="512" y="72" width="30" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.97774057540000003" green="0.97774057540000003" blue="0.97774057540000003" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="5" minValue="0.0" maxValue="10" translatesAutoresizingMaskIntoConstraints="NO" id="daJ-va-kf1">
+                                <rect key="frame" x="360" y="265" width="184" height="31"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="3s6-Gu-jCo"/>
+                                    <constraint firstAttribute="width" constant="180" id="VCJ-lA-aog"/>
+                                </constraints>
+                            </slider>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="06k-Wo-3CS">
+                                <rect key="frame" x="16" y="265" width="40" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="F8K-jE-Tbj"/>
+                                    <constraint firstAttribute="width" constant="40" id="Lea-po-oSb"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <state key="normal" title="Add"/>
+                            </button>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="uUP-hd-0sV">
+                                <rect key="frame" x="16" y="303" width="288" height="265"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="KWr-yO-rqx">
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KWr-yO-rqx" id="VOt-o4-Pew">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="iGd-s6-9gT" firstAttribute="top" secondItem="Mx4-vp-b9Q" secondAttribute="bottom" constant="8" id="7vT-x7-A8M"/>
+                            <constraint firstItem="iGd-s6-9gT" firstAttribute="trailing" secondItem="Acv-A4-PlE" secondAttribute="trailing" constant="10" id="8t3-YJ-6TZ"/>
+                            <constraint firstItem="06k-Wo-3CS" firstAttribute="top" secondItem="iGd-s6-9gT" secondAttribute="bottom" constant="8" id="Vwy-Ho-ADj"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="daJ-va-kf1" secondAttribute="trailing" constant="10" id="WrA-9I-YfG"/>
+                            <constraint firstItem="iGd-s6-9gT" firstAttribute="leading" secondItem="xil-nj-hIq" secondAttribute="leadingMargin" id="Zm5-Tu-Khj"/>
+                            <constraint firstItem="iGd-s6-9gT" firstAttribute="leading" secondItem="Acv-A4-PlE" secondAttribute="leading" constant="-246" id="ccu-QU-3i1"/>
+                            <constraint firstItem="daJ-va-kf1" firstAttribute="top" secondItem="iGd-s6-9gT" secondAttribute="bottom" constant="8" id="ei8-9W-Me5"/>
+                            <constraint firstItem="06k-Wo-3CS" firstAttribute="leading" secondItem="xil-nj-hIq" secondAttribute="leadingMargin" id="jv6-Op-1Hb"/>
+                            <constraint firstItem="iGd-s6-9gT" firstAttribute="trailing" secondItem="xil-nj-hIq" secondAttribute="trailingMargin" id="qmE-uM-8RM"/>
+                            <constraint firstItem="iGd-s6-9gT" firstAttribute="top" secondItem="Acv-A4-PlE" secondAttribute="top" id="ugz-fm-GvL"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="ccu-QU-3i1"/>
+                            </mask>
+                        </variation>
+                    </view>
+                    <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="WVu-k0-N3W" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1779" y="354"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="qb6-xj-b4T">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Bzo-bA-qu8" sceneMemberID="viewController">
                     <toolbarItems/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="Qgs-E5-jAj">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -100,4 +185,7 @@
             <point key="canvasLocation" x="401" y="1015"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="graph.png" width="193" height="138"/>
+    </resources>
 </document>
