--- a/Pilot this/Base.lproj/Main.storyboard
+++ b/Pilot this/Base.lproj/Main.storyboard
@@ -89,33 +89,36 @@
         <!--Product Name-->
         <scene sceneID="XkF-Xz-ayX">
             <objects>
-                <viewController title="Product Name" id="PL4-Nv-KcG" sceneMemberID="viewController">
+                <viewController title="Product Name" id="PL4-Nv-KcG" customClass="DetailsViewController" customModule="Pilot_this" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Mx4-vp-b9Q"/>
                         <viewControllerLayoutGuide type="bottom" id="yVP-vW-Mdz"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="xil-nj-hIq">
-                        <rect key="frame" x="0.0" y="0.0" width="568" height="320"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="graph.png" translatesAutoresizingMaskIntoConstraints="NO" id="iGd-s6-9gT">
-                                <rect key="frame" x="16" y="72" width="536" height="185"/>
+                                <rect key="frame" x="16" y="72" width="288" height="185"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="185" id="Vin-Dc-r30"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="30d" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Acv-A4-PlE">
-                                <rect key="frame" x="512" y="72" width="30" height="21"/>
+                                <rect key="frame" x="264" y="72" width="30" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.97774057540000003" green="0.97774057540000003" blue="0.97774057540000003" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="5" minValue="0.0" maxValue="10" translatesAutoresizingMaskIntoConstraints="NO" id="daJ-va-kf1">
-                                <rect key="frame" x="360" y="265" width="184" height="31"/>
+                                <rect key="frame" x="86" y="265" width="184" height="31"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="3s6-Gu-jCo"/>
                                     <constraint firstAttribute="width" constant="180" id="VCJ-lA-aog"/>
                                 </constraints>
+                                <connections>
+                                    <action selector="levelSliderChanged:" destination="PL4-Nv-KcG" eventType="valueChanged" id="LsA-3h-rRv"/>
+                                </connections>
                             </slider>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="06k-Wo-3CS">
                                 <rect key="frame" x="16" y="265" width="40" height="30"/>
@@ -126,44 +129,134 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <state key="normal" title="Add"/>
                             </button>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="uUP-hd-0sV">
-                                <rect key="frame" x="16" y="303" width="288" height="265"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="90" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="uUP-hd-0sV">
+                                <rect key="frame" x="0.0" y="303" width="320" height="265"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="KWr-yO-rqx">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="CravingCell" rowHeight="90" id="KWr-yO-rqx">
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KWr-yO-rqx" id="VOt-o4-Pew">
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="23/08 - 10:45 AM" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CFR-F9-i9W">
+                                                    <rect key="frame" x="8" y="9" width="233" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="233" id="VyB-gf-WBN"/>
+                                                        <constraint firstAttribute="height" constant="21" id="pYp-vh-sXQ"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="scale.png" translatesAutoresizingMaskIntoConstraints="NO" id="d3A-UI-wnh">
+                                                    <rect key="frame" x="298" y="9" width="14" height="74"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="74" id="6BC-Xp-QYL"/>
+                                                        <constraint firstAttribute="width" constant="14" id="rwc-TY-qJg"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="79l-eY-Qm8">
+                                                    <rect key="frame" x="249" y="10" width="41" height="69"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="69" id="Oix-uk-T1Y"/>
+                                                        <constraint firstAttribute="width" constant="41" id="oXt-ob-tNk"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="26"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Comment here..." minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xWN-qJ-rMN">
+                                                    <rect key="frame" x="8" y="49" width="233" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="30" id="1Yf-EQ-8HU"/>
+                                                        <constraint firstAttribute="height" constant="30" id="jWS-az-wPI"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <textInputTraits key="textInputTraits"/>
+                                                    <variation key="default">
+                                                        <mask key="constraints">
+                                                            <exclude reference="1Yf-EQ-8HU"/>
+                                                        </mask>
+                                                    </variation>
+                                                </textField>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="79l-eY-Qm8" firstAttribute="leading" secondItem="xWN-qJ-rMN" secondAttribute="trailing" constant="8" id="8yE-4d-75o"/>
+                                                <constraint firstItem="CFR-F9-i9W" firstAttribute="top" secondItem="VOt-o4-Pew" secondAttribute="topMargin" constant="1" id="CQR-l2-vvH"/>
+                                                <constraint firstAttribute="centerY" secondItem="d3A-UI-wnh" secondAttribute="centerY" constant="-1" id="E2O-e9-7eb"/>
+                                                <constraint firstItem="xWN-qJ-rMN" firstAttribute="leading" secondItem="VOt-o4-Pew" secondAttribute="leadingMargin" id="FUJ-X7-k8f"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="xWN-qJ-rMN" secondAttribute="bottom" constant="3" id="M3k-Xq-PL0"/>
+                                                <constraint firstItem="d3A-UI-wnh" firstAttribute="trailing" secondItem="VOt-o4-Pew" secondAttribute="trailingMargin" id="ME0-b9-Fh4"/>
+                                                <constraint firstAttribute="centerY" secondItem="79l-eY-Qm8" secondAttribute="centerY" id="Mae-r7-rvr"/>
+                                                <constraint firstItem="79l-eY-Qm8" firstAttribute="leading" secondItem="xWN-qJ-rMN" secondAttribute="trailing" constant="8" id="Mq1-sW-VV9"/>
+                                                <constraint firstItem="CFR-F9-i9W" firstAttribute="leading" secondItem="VOt-o4-Pew" secondAttribute="leadingMargin" id="Shi-tw-gOi"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="xWN-qJ-rMN" secondAttribute="bottom" constant="2" id="XPw-NP-NBW"/>
+                                                <constraint firstItem="xWN-qJ-rMN" firstAttribute="leading" secondItem="VOt-o4-Pew" secondAttribute="leadingMargin" id="aV0-I2-3RE"/>
+                                                <constraint firstItem="d3A-UI-wnh" firstAttribute="leading" secondItem="79l-eY-Qm8" secondAttribute="trailing" constant="8" id="s5Z-Xh-ZbB"/>
+                                            </constraints>
+                                            <variation key="default">
+                                                <mask key="constraints">
+                                                    <exclude reference="FUJ-X7-k8f"/>
+                                                    <exclude reference="M3k-Xq-PL0"/>
+                                                    <exclude reference="8yE-4d-75o"/>
+                                                </mask>
+                                            </variation>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </prototypes>
+                                <sections/>
+                                <connections>
+                                    <outlet property="dataSource" destination="PL4-Nv-KcG" id="nwh-6U-62n"/>
+                                    <outlet property="delegate" destination="PL4-Nv-KcG" id="Fmp-sQ-FbX"/>
+                                </connections>
                             </tableView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UWy-7k-amI">
+                                <rect key="frame" x="276" y="269" width="28" height="26"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="26" id="aJf-Yr-LXi"/>
+                                    <constraint firstAttribute="width" constant="28" id="fmR-XX-ezc"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="23"/>
+                                <color key="textColor" red="0.10832093249999999" green="0.10832093249999999" blue="0.10832093249999999" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="yVP-vW-Mdz" firstAttribute="top" secondItem="uUP-hd-0sV" secondAttribute="bottom" id="0ob-dx-aCN"/>
                             <constraint firstItem="iGd-s6-9gT" firstAttribute="top" secondItem="Mx4-vp-b9Q" secondAttribute="bottom" constant="8" id="7vT-x7-A8M"/>
                             <constraint firstItem="iGd-s6-9gT" firstAttribute="trailing" secondItem="Acv-A4-PlE" secondAttribute="trailing" constant="10" id="8t3-YJ-6TZ"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="uUP-hd-0sV" secondAttribute="trailing" constant="-16" id="FYF-S9-wC0"/>
                             <constraint firstItem="06k-Wo-3CS" firstAttribute="top" secondItem="iGd-s6-9gT" secondAttribute="bottom" constant="8" id="Vwy-Ho-ADj"/>
+                            <constraint firstItem="UWy-7k-amI" firstAttribute="leading" secondItem="daJ-va-kf1" secondAttribute="trailing" constant="8" id="VzR-il-ggX"/>
+                            <constraint firstItem="uUP-hd-0sV" firstAttribute="top" secondItem="06k-Wo-3CS" secondAttribute="bottom" constant="8" id="WAa-21-Guz"/>
                             <constraint firstAttribute="trailingMargin" secondItem="daJ-va-kf1" secondAttribute="trailing" constant="10" id="WrA-9I-YfG"/>
+                            <constraint firstItem="UWy-7k-amI" firstAttribute="trailing" secondItem="xil-nj-hIq" secondAttribute="trailingMargin" id="XEf-mt-58m"/>
                             <constraint firstItem="iGd-s6-9gT" firstAttribute="leading" secondItem="xil-nj-hIq" secondAttribute="leadingMargin" id="Zm5-Tu-Khj"/>
                             <constraint firstItem="iGd-s6-9gT" firstAttribute="leading" secondItem="Acv-A4-PlE" secondAttribute="leading" constant="-246" id="ccu-QU-3i1"/>
                             <constraint firstItem="daJ-va-kf1" firstAttribute="top" secondItem="iGd-s6-9gT" secondAttribute="bottom" constant="8" id="ei8-9W-Me5"/>
                             <constraint firstItem="06k-Wo-3CS" firstAttribute="leading" secondItem="xil-nj-hIq" secondAttribute="leadingMargin" id="jv6-Op-1Hb"/>
+                            <constraint firstItem="UWy-7k-amI" firstAttribute="top" secondItem="iGd-s6-9gT" secondAttribute="bottom" constant="12" id="knY-6p-Rhz"/>
+                            <constraint firstItem="uUP-hd-0sV" firstAttribute="leading" secondItem="xil-nj-hIq" secondAttribute="leadingMargin" constant="-16" id="pvh-On-fkx"/>
                             <constraint firstItem="iGd-s6-9gT" firstAttribute="trailing" secondItem="xil-nj-hIq" secondAttribute="trailingMargin" id="qmE-uM-8RM"/>
                             <constraint firstItem="iGd-s6-9gT" firstAttribute="top" secondItem="Acv-A4-PlE" secondAttribute="top" id="ugz-fm-GvL"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
                                 <exclude reference="ccu-QU-3i1"/>
+                                <exclude reference="WrA-9I-YfG"/>
                             </mask>
                         </variation>
                     </view>
-                    <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                    <connections>
+                        <outlet property="levelLabel" destination="UWy-7k-amI" id="SJM-dE-nk3"/>
+                        <outlet property="levelSlider" destination="daJ-va-kf1" id="JD5-od-vY7"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WVu-k0-N3W" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1779" y="354"/>
+            <point key="canvasLocation" x="1779" y="344"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="qb6-xj-b4T">
@@ -187,5 +280,6 @@
     </scenes>
     <resources>
         <image name="graph.png" width="193" height="138"/>
+        <image name="scale.png" width="48" height="480"/>
     </resources>
 </document>
